--- a/packages/postcss/test/fixtures/css/v4.1.1-uniapp-vue3.out.css
+++ b/packages/postcss/test/fixtures/css/v4.1.1-uniapp-vue3.out.css
@@ -1,5 +1,5 @@
 /*! tailwindcss v4.1.1 | MIT License | https://tailwindcss.com */
-:before,:after,::backdrop {
+view,text,:before,:after,::backdrop {
       --tw-font-weight: initial;
     }
 
@@ -11,13 +11,13 @@
 
 }
 
-:root,:host {
+page,:host {
   --color-white: #fff;
   --spacing: .25rem;
   --font-weight-bold: 700;
 }
 
-:after,:before,::backdrop {
+view,text,:after,:before,::backdrop {
   box-sizing: border-box;
   border: 0 solid;
   margin: 0;
