chore: minify exports css

--- a/packages/weapp-tailwindcss/preflight.css
+++ b/packages/weapp-tailwindcss/preflight.css
@@ -1,9 +1,1 @@
-*,
-:after,
-:before,
-::backdrop {
-  box-sizing: border-box;
-  border: 0 solid;
-  margin: 0;
-  padding: 0;
-}
+*,:after,:before,::backdrop{box-sizing:border-box;border:0 solid;margin:0;padding:0}
