--- a/packages/weapp-tailwindcss/test/fixtures/css/v4-weapp-tailwindcss-default-with-layer-output.before.css
+++ b/packages/weapp-tailwindcss/test/fixtures/css/v4-weapp-tailwindcss-default-with-layer-output.before.css
@@ -2,14 +2,11 @@
 @layer properties;
 @layer theme {
   :root, :host {
-    --color-zinc-800: oklch(27.4% 0.006 286.033);
+    --color-zinc-800: oklch(27.4% .006 286.033);
   }
 }
 @layer base {
-  *,
-  :after,
-  :before,
-  ::backdrop {
+  *,:after,:before,::backdrop {
     box-sizing: border-box;
     border: 0 solid;
     margin: 0;
