chore: try add uni-app x support

--- a/packages/weapp-tailwindcss/css/uni-app-x.css
+++ b/packages/weapp-tailwindcss/css/uni-app-x.css
@@ -1,3 +1,4 @@
 @import './theme.css';
-@import './uni-app-x/preflight.css';
+@import './rgb.css';
+/* @import './uni-app-x/preflight.css'; */
 @import './utilities.css';
