--- a/apps/vite-native-ts/miniprogram/pages/index/index.wxml
+++ b/apps/vite-native-ts/miniprogram/pages/index/index.wxml
@@ -1,3 +1,4 @@
 <view class="p-4">
   <IceButton class="bg-[#d72929]" tw-class="bg-[orange]" hover-class="bg-[green]" tw-hover-class="bg-[pink]"></IceButton>
+  <view class="dark:hover:border-green-300 dark:hover:bg-gray-600">111222</view>
 </view>
