--- a/apps/vite-native/pages/index/index.wxml
+++ b/apps/vite-native/pages/index/index.wxml
@@ -1,6 +1,6 @@
 <scroll-view scroll-y type="list">
   <view class="space-y-2.5">
-    <view class="bg-[#7d7ac2] text-[100px] text-[#123456] w-[323px] {{true?'h-[30px]':'h-[45px]'}}">
+    <view class="bg-[#68c828] text-[100px] text-[#123456] w-[323px] {{true?'h-[30px]':'h-[45px]'}}">
       111
     </view>
     <view class="bg-[#3a32d1] text-[100rpx] text-red-700 w-[323px] {{false?'h-[30px]':'h-[45px]'}}">
