chore(demo): add custom tailwindcss@4 theme

--- a/demo/uni-app-tailwindcss-v4/src/main.css
+++ b/demo/uni-app-tailwindcss-v4/src/main.css
@@ -1,3 +1,18 @@
+/* stylelint-disable custom-property-pattern */
 @import "weapp-tailwindcss";
 @config "../tailwind.config.js";
+
+@theme {
+  --color-neutral-1B: #1b1b1b;
+  --color-neutral-66: #666;
+  --color-neutral-99: #999;
+  --color-neutral-BB: #bbb;
+  --color-neutral-EE: #eee;
+  --color-neutral-F8: #f8f8f8;
+  --color-neutral-FF: #fff;
+  --color-midnight: #121063;
+  --color-tahiti: #3ab7bf;
+  --color-bermuda: #78dcca;
+}
+
 /* @source "../node_modules/tailwindcss-core-plugins-extractor/dist"; */
