--- a/packages/postcss/test/fixtures/css/App.uvue?vue&type=style&index=0&lang.css
+++ b/packages/postcss/test/fixtures/css/App.uvue?vue&type=style&index=0&lang.css
@@ -1,9 +1,4 @@
-// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html
-
-exports[`uni-app-x > app.uvue?vue&type=style&index=0&lang.css > css 1`] = `
-"::before,::after {
-    --tw-content: ""}
-view,text,::before,::after {
+*, ::before, ::after {
     --tw-border-spacing-x: 0;
     --tw-border-spacing-y: 0;
     --tw-translate-x: 0;
@@ -28,11 +23,11 @@ view,text,::before,::after {
     --tw-ring-inset:  ;
     --tw-ring-offset-width: 0px;
     --tw-ring-offset-color: #fff;
-    --tw-ring-color: rgba(59, 130, 246, 0.5);
-    --tw-ring-offset-shadow: 0 0 rgba(0,0,0,0);
-    --tw-ring-shadow: 0 0 rgba(0,0,0,0);
-    --tw-shadow: 0 0 rgba(0,0,0,0);
-    --tw-shadow-colored: 0 0 rgba(0,0,0,0);
+    --tw-ring-color: rgb(59 130 246 / 0.5);
+    --tw-ring-offset-shadow: 0 0 #0000;
+    --tw-ring-shadow: 0 0 #0000;
+    --tw-shadow: 0 0 #0000;
+    --tw-shadow-colored: 0 0 #0000;
     --tw-blur:  ;
     --tw-brightness:  ;
     --tw-contrast:  ;
@@ -81,11 +76,11 @@ view,text,::before,::after {
     --tw-ring-inset:  ;
     --tw-ring-offset-width: 0px;
     --tw-ring-offset-color: #fff;
-    --tw-ring-color: rgba(59, 130, 246, 0.5);
-    --tw-ring-offset-shadow: 0 0 rgba(0,0,0,0);
-    --tw-ring-shadow: 0 0 rgba(0,0,0,0);
-    --tw-shadow: 0 0 rgba(0,0,0,0);
-    --tw-shadow-colored: 0 0 rgba(0,0,0,0);
+    --tw-ring-color: rgb(59 130 246 / 0.5);
+    --tw-ring-offset-shadow: 0 0 #0000;
+    --tw-ring-shadow: 0 0 #0000;
+    --tw-shadow: 0 0 #0000;
+    --tw-shadow-colored: 0 0 #0000;
     --tw-blur:  ;
     --tw-brightness:  ;
     --tw-contrast:  ;
@@ -109,41 +104,18 @@ view,text,::before,::after {
     --tw-contain-paint:  ;
     --tw-contain-style:  
 }
-.mt-_32d43rpx_ {
+.mt-\[32\.43rpx\] {
     margin-top: 32.43rpx
 }
-.bg-_h322323_ {
+.bg-\[\#322323\] {
     --tw-bg-opacity: 1;
-    background-color: rgba(50, 35, 35, var(--tw-bg-opacity, 1))
+    background-color: rgb(50 35 35 / var(--tw-bg-opacity, 1))
 }
 .px-4 {
     padding-left: 1rem;
     padding-right: 1rem
 }
-.text-_h844343_ {
+.text-\[\#844343\] {
     --tw-text-opacity: 1;
-    color: rgba(132, 67, 67, var(--tw-text-opacity, 1))
+    color: rgb(132 67 67 / var(--tw-text-opacity, 1))
 }
-"
-`;
-
-exports[`uni-app-x > css > css 1`] = `
-"/*! tailwindcss v4.1.4 | MIT License | https://tailwindcss.com */
-page,:host {
-  --spacing: .25rem;
-}
-.mt-_32d43rpx_ {
-  margin-top: 32.43rpx;
-}
-.bg-_h322323_ {
-  background-color: #322323;
-}
-.px-4 {
-  padding-left: calc(var(--spacing) * 4);
-  padding-right: calc(var(--spacing) * 4);
-}
-.text-_h844343_ {
-  color: #844343;
-}
-"
-`;
