--- a/apps/uni-app-x-hbuilderx-tailwindcss4/debug/pre/App.uvue?vue&type=style&index=0&lang.css
+++ b/apps/uni-app-x-hbuilderx-tailwindcss4/debug/pre/App.uvue?vue&type=style&index=0&lang.css
@@ -1,16 +1,26 @@
 /*! tailwindcss v4.1.11 | MIT License | https://tailwindcss.com */
-:root, :host {
-  --spacing: .25rem;
+page,:host {
+  --spacing: 8rpx;
 }
-.mt-\[32\.43rpx\] {
+.mt-_32d43rpx_ {
   margin-top: 32.43rpx;
 }
-.bg-\[\#322323\] {
-  background-color: #322323;
+.mt-_100px_ {
+  margin-top: 100px;
+}
+.bg-_red_ {
+  background-color: red;
 }
 .px-4 {
-  padding-inline: calc(var(--spacing) * 4);
+  padding-left: calc(.25rem * 4);
+  padding-right: calc(.25rem * 4);
 }
-.text-\[\#844343\] {
+.text-_90px_ {
+  font-size: 90px;
+}
+.text-_100px_ {
+  font-size: 100px;
+}
+.text-_h844343_ {
   color: #844343;
 }
