feat: support loggerLevel

--- a/apps/web-postcss7-compat/transformed.css
+++ b/apps/web-postcss7-compat/transformed.css
@@ -1,12 +1,12 @@
 .m-3 {
-    margin: 0.75rem
+    margin: 24rpx
 }
-  .h-\[121px\] {
+  .h-_121px_ {
     height: 121px
 }
-  .w-\[99px\] {
+  .w-_99px_ {
     width: 99px
 }
-  .\!p-\[1\.1px\] {
+  .ip-_1d1px_ {
     padding: 1.1px !important
 }
