--- a/website/src/css/custom.scss
+++ b/website/src/css/custom.scss
@@ -79,6 +79,30 @@ a:hover {
   text-decoration: none;
 }
 
+.homepage a,
+.homepage a:active,
+.homepage a:visited {
+  color: inherit;
+  text-decoration: none;
+}
+
+.homepage a:hover {
+  color: inherit;
+  text-decoration: none;
+}
+
+.homepage .home-cta,
+.homepage .home-cta:visited,
+html[data-theme='dark'] .homepage .home-cta,
+html[data-theme='dark'] .homepage .home-cta:visited {
+  color: #082f49;
+}
+
+.homepage .home-cta:hover,
+html[data-theme='dark'] .homepage .home-cta:hover {
+  color: #0c4a6e;
+}
+
 html[data-theme='dark'] {
   --docusaurus-highlighted-code-line-bg: rgb(66 66 66 / 35%);
   --ifm-background-color: theme('colors.slate.900');
