--- a/demo/web/out.css
+++ b/demo/web/out.css
@@ -35,14 +35,12 @@
 .space-y-_12d0rpx_>view+view,.space-y-_12d0rpx_>view+text,.space-y-_12d0rpx_>text+view,.space-y-_12d0rpx_>text+text {
     --tw-space-y-reverse: 0;
     margin-top: calc(12.0rpx * (1 - var(--tw-space-y-reverse)));
-    margin-top: calc(12.0rpx * calc(1 - var(--tw-space-y-reverse)));
     margin-bottom: calc(12.0rpx * var(--tw-space-y-reverse))
 }
 .divide-x-_3rpx_>view+view,.divide-x-_3rpx_>view+text,.divide-x-_3rpx_>text+view,.divide-x-_3rpx_>text+text {
     --tw-divide-x-reverse: 0;
     border-right-width: calc(3rpx * var(--tw-divide-x-reverse));
-    border-left-width: calc(3rpx * (1 - var(--tw-divide-x-reverse)));
-    border-left-width: calc(3rpx * calc(1 - var(--tw-divide-x-reverse)))
+    border-left-width: calc(3rpx * (1 - var(--tw-divide-x-reverse)))
 }
 .rounded-_12rpx_ {
     border-radius: 12rpx
